--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,9 +1,28 @@
 .header{
     padding: 20px 0;
+    &__title-link{
+        color: #c1cfdf;
+        font-size: 25px;
+    }
+    &__login{
+        cursor: pointer;
+    }
+    &__link{
+        color: #b0ed21;
+    }
+    &__btn{
+        background-color:#c1cfdf;
+        cursor: pointer;
+        padding: 7px 15px ;
+        border-radius: 10px;
+        border: none;
+        color: white;
+    }
     &__nav{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin-bottom: 15px;
     }
     &__left{
         display: flex;
@@ -17,7 +36,7 @@
     }
     &__bottom{
         padding: 40px 0;
-        background-color: rgb(93, 122, 209);
+        background: linear-gradient(to bottom right, blue, pink);
         
         &-search{
             position: relative;
